# constraint-tuples

./: .travis.yml  CHANGELOG.md  GenCTuples.sh  README.md  cabal.haskell-ci  cabal.project  constraint-tuples.cabal
.github/workflows/: haskell-ci.yml
exe/: GeneratorScript.hs
generator-script/: generator-script.cabal
generator-script/exe/: GeneratorScript.hs
src/Data/Tuple/: Constraint.hs
src/Data/Tuple/Constraint/: ClassNewtype.hs  TypeFamily.hs  TypeSynonym.hs
